# python-chess

./: Chess.py  Chess_final.py  README.md  error_list.txt  pyproject.toml  test.py
checkpoints/: chess_working_moves.py
chess_game/: __main__.py  board.py  game.py  helpers.py  pieces.py  player.py
old/: Board.py  Board2.py  Board21.py  Board3.py  Chess.py  Chess2.py  Chess3.py
